--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "pages": [
-    "pages/car/car",
+  "pages": ["pages/show/show",
     "pages/index/index",
+    
     "pages/logs/logs"
   ],
   "window": {
