--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "pages": ["pages/show/show",
+  "pages": [
     "pages/index/index",
-    
+    "pages/show/show",
     "pages/logs/logs"
   ],
   "window": {
